2004-10-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (gtk_window_set_icon_list): Ref the new icons
	before unreffing the old ones.  (#154468, Morten Welinder)

2004-10-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_set_model): Reset pointers
	pointing to the old model.  (#154350)

	* gtk/gtkwindow.c (icon_list_from_theme): Don't leak the
	sizes array.  (#154310, Christian Persch)

	* gtk/gtktreeviewcolumn.c 
	(gtk_tree_view_column_setup_sort_column_id_callback): 
	Set sort_indicator to FALSE when appropriate.  (#153714, 
	Reinout van Schouwen)

	* gtk/gtktreeview.c (gtk_tree_view_search_position_func): 
	Fix positioning near the monitor boundaries.  (#154341,
	Ken Harris)

2004-10-01  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkmenutoolbutton.c: deactivate the menu before setiing it
	to something else. Bug #153887.

2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	Fix bug #150790:
	
	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_get_size): Fix the
	calculation of x_offset when ellipsized and in RTL mode.
	(gtk_cell_renderer_text_render): Fix the calculation of the layout
	width when ellipsized.  

2004-10-01  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkglobals-win32.c: Set _gdk_input_ignore_wintab to
	FALSE, thus enabling tablet input by default.

	* gdk/win32/gdkmain-win32.c (_gdk_windowing_args): Accept the
	--use-wintab option again (but without effect, as this is now the
	default, see above). (#153788)

	* modules/input/gtkimcontextime.c: Numerous changes.

	Remove the ifdef UNICODE conditionals. Always use the
	wide-character Imm* API. It is present also in Windows 98 and
	Me. (Not Windows 95, but I think we don't care about that.) Using
	the multibyte API wouldn't work anyway on systems where the system
	codepage doesn't support the language the user uses an IME for, so
	for instance I wouldn't be able to test this module on my English
	Windows 2000 although I do have C, J and K IMEs available.
